28430 add directory grid for artists

--- a/static-html/dev-html/partials/directory-template.html
+++ b/static-html/dev-html/partials/directory-template.html
@@ -26,3 +26,176 @@
     </section>
 
 </div>
+
+<!--medium-4 large-3 xlarge-2 -->
+<section class="row expanded small-collapse small-up-1 medium-up-3 large-up-3 xxlarge-up-5">
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="column">
+        <div class="gridItem gridItem--element">
+            <a href="#" class="js-touchFocus">
+                <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                <div class="gridItem-info">
+                    <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
+                    <p class="u-text--upper"><i>Medium | Genre</i></p>
+                    <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                </div>
+            </a>
+        </div>
+
+    </div>
+</section>
