--- a/static-html/scss/setup/_utilities.scss
+++ b/static-html/scss/setup/_utilities.scss
@@ -35,6 +35,9 @@
 .u-text--upper {
     text-transform: uppercase;
 }
+.u-text--italic {
+    font-style: italic;
+}
 .u-verticalAlign--center {
     position: relative;
     top: 50%;
