--- a/static-html/scss/_settings.scss
+++ b/static-html/scss/_settings.scss
@@ -86,7 +86,7 @@ $breakpoints: (
   xlarge: 1279px,
   xxlarge: 1440px,
 );
-$breakpoint-classes: (small halfMedium medium large xlarge);
+$breakpoint-classes: (small halfMedium medium large xlarge xxlarge);
 
 // 3. The Grid
 // -----------
