28431 added map block for event and venue pages

--- a/static-html/dev-html/partials/venue-page-template.html
+++ b/static-html/dev-html/partials/venue-page-template.html
@@ -39,7 +39,9 @@
                     <p><a href="#">Venue Name</a></p>
                     <p>123 Street Rd <br> City, State, Zip <br> United States</p>
                     <p>(000) 000 0000</p>
-                    <div class="map"></div>
+                    <div class="eventWidget-mapHolder">
+                        <!-- Map here width x height settings sets in plugin settings > formatting as width: 100%; height: 280px; -->
+                    </div>
                     <p><a href="#">Get Directions</a></p>
                 </div>
             </div>
