28431 Added map thumb and make some changes for sidebar layout

--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -6,7 +6,6 @@
 @import 'global';
 @import 'partials/forms';
 
-@import 'partials/event-widget';
 @import 'partials/footer';
 @import 'partials/grid-item';
 @import 'partials/header';
@@ -14,6 +13,7 @@
 @import 'partials/mobile-nav-toggle';
 @import 'partials/off-canvas';
 @import 'partials/post-list';
+@import 'partials/post-page';
 @import 'partials/post-page-navigation';
 @import 'partials/sidebar-gallery';
 @import 'partials/promo-list';
