--- a/static-html/dev-html/partials/venue-page-template.html
+++ b/static-html/dev-html/partials/venue-page-template.html
@@ -10,13 +10,13 @@
                 <!--    Post title  -->
                 <h1 class="postPage-title">H1 Venue Name</h1>
 
+                <!--    Post Image   -->
+                <div class="postPage-image">
+                    <img src="http://placehold.it/650x380" alt="" width="650" height="380">
+                </div>
+
                 <!--    Post Content    -->
                 <div class="postPage-content postPage-content--bottomLine">
-
-                    <!-- for image I'm using WP Add media structure  -->
-                    <figure class="wp-caption alignnone">
-                        <img class="size-full wp-image-13" src="http://placehold.it/650x350" alt="" width="650" height="350">
-                    </figure>
 
                     <h2>ABOUT [THIS VENUE] H2</h2>
                     <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All
@@ -33,14 +33,16 @@
     <aside class="medium-4 large-3 column siteSidebar">
         <div class="siteSidebar-inner">
             <!--    Sidebar widget  -->
-            <div class="eventWidget">
+            <div class="siteSidebar-item">
                 <h3>Venue details H3</h3>
-                <div class="eventWidget-venueInfo">
+                <div class="siteSidebar-item-content">
                     <p><a href="#">Venue Name</a></p>
                     <p>123 Street Rd <br> City, State, Zip <br> United States</p>
                     <p>(000) 000 0000</p>
-                    <div class="eventWidget-mapHolder">
+                    <div class="siteSidebar-item-mapHolder">
                         <!-- Map here width x height settings sets in plugin settings > formatting as width: 100%; height: 280px; -->
+                        <img src="images/map-thumb.jpg" alt="">
+                        <!-- TODO:remove this image when plugins map took it's place -->
                     </div>
                     <p><a href="#">Get Directions</a></p>
                 </div>
@@ -48,7 +50,7 @@
         </div>
     </aside>
 
-    <section class="medium-8 large-9 column relatedContent relatedContent--hasSidebar end">
+    <section class="medium-8 large-9 column end relatedContent relatedContent--hasSidebar">
         <!--    Upcoming Events  -->
         <section class="row column">
             <h2>UPCOMING EVENTS H2</h2>
