--- a/static-html/scss/_global.scss
+++ b/static-html/scss/_global.scss
@@ -85,36 +85,6 @@ ol {
     font-size: $fontSize-small;
     color: $charcoal;
 }
-.postPage-info {
-    font-size: $fontSize-small;
-    letter-spacing: 2px;
-    margin-top: 27px;
-    margin-bottom: 30px;
-    padding: 5px 0;
-    border-bottom: 3px solid $black;
-    p {
-        margin-bottom: 0;
-    }
-}
-.postPage-backLink {
-    margin-bottom: 40px;
-    a {
-        text-decoration: underline;
-        &:hover {
-            text-decoration: none;
-        }
-    }
-}
-.postPage-content-links {
-    .btn {
-        min-width: 220px;
-        margin-right: 20px;
-    }
-}
-.postPage-content--bottomLine {
-    padding-bottom: 30px;
-    border-bottom: 2px solid $gray-border;
-}
 #svgPlaceholder {
     display: none;
 }
@@ -124,4 +94,8 @@ ol {
 .svgIcon--logo {
     width: 164px;
     height: 65px;
+}
+.section-bottomLined {
+    padding-bottom: 40px;
+    border-bottom: 2px solid #d4d4d4;
 }
