--- a/static-html/scss/partials/_sidebar-gallery.scss
+++ b/static-html/scss/partials/_sidebar-gallery.scss
@@ -13,5 +13,18 @@
         @include breakpoint(medium) {
             width: 50%;
         }
+        a {
+            display: block;
+            overflow: hidden;
+            &:hover {
+                img {
+                    transform: scale(1.2);
+                }
+            }
+        }
+        img {
+            width: 100%;
+            transition: all .2s ease-out;
+        }
     }
 }
