--- a/wp-content/themes/w4ptheme/scss/partials/_site-sitebar.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_site-sitebar.scss
@@ -14,3 +14,6 @@
     background: url("../images/sky-background.jpg") $sky no-repeat 0 0;
     color: $white;
 }
+.siteSidebar-item-mapHolder {
+    margin-bottom: 10px;
+}
