--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -6,6 +6,7 @@
 @import 'global';
 @import 'partials/forms';
 
+@import 'partials/entity-grid';
 @import 'partials/footer';
 @import 'partials/grid-item';
 @import 'partials/header';
