--- a/static-html/dev-html/partials/section-landing.html
+++ b/static-html/dev-html/partials/section-landing.html
@@ -24,6 +24,7 @@
         <section class="row halfMedium-collapse medium-uncollapse promoList">
             <div class="halfMedium-6 column">
                 <div class="promoList-item">
+                    <a href="#" class="promoList-item-link"></a>
                     <div class="promoList-item-image">
                         <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
                     </div>
@@ -37,10 +38,12 @@
                     </div>
                 </div>
                 <!--   / promoList-item  -->
+
             </div>
             <!--   promoList-item  -->
             <div class="halfMedium-6 column">
                 <div class="promoList-item">
+                    <a href="#" class="promoList-item-link"></a>
                     <div class="promoList-item-image">
                         <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
                     </div>
@@ -54,10 +57,12 @@
                     </div>
                 </div>
                 <!--   / promoList-item  -->
+
             </div>
             <!--   promoList-item  -->
             <div class="halfMedium-6 column">
                 <div class="promoList-item">
+                    <a href="#" class="promoList-item-link"></a>
                     <div class="promoList-item-image">
                         <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
                     </div>
@@ -71,10 +76,12 @@
                     </div>
                 </div>
                 <!--   / promoList-item  -->
+
             </div>
             <!--   promoList-item  -->
             <div class="halfMedium-6 column">
                 <div class="promoList-item">
+                    <a href="#" class="promoList-item-link"></a>
                     <div class="promoList-item-image">
                         <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
                     </div>
@@ -88,6 +95,7 @@
                     </div>
                 </div>
                 <!--   / promoList-item  -->
+
             </div>
             <!--   promoList-item  -->
         </section>
