--- a/wp-content/themes/w4ptheme/scss/partials/_promo-list.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_promo-list.scss
@@ -6,6 +6,14 @@
     margin-bottom: 30px;
     overflow: hidden;
 }
+.promoList-item-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 102;
+}
 .promoList-item-image {
     img {
         width: 100%;
@@ -72,7 +80,7 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
-    z-index: 102;
+    z-index: 103;
     transition: all .2s ease-out;
     @include breakpoint(large) {
         bottom: 30px;
