--- a/static-html/scss/partials/_site-navigation.scss
+++ b/static-html/scss/partials/_site-navigation.scss
@@ -69,6 +69,7 @@
         visibility: hidden;
         position: absolute;
         left: 0;
+        z-index: 102;
         min-width: 100%;
         background: $sky--dark;
         a {
