--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -11,6 +11,7 @@
 @import 'partials/footer';
 @import 'partials/grid-item';
 @import 'partials/header';
+@import 'partials/header-section';
 @import 'partials/layout';
 @import 'partials/mobile-nav-toggle';
 @import 'partials/off-canvas';
