--- a/wp-content/themes/w4ptheme/scss/application.scss
+++ b/wp-content/themes/w4ptheme/scss/application.scss
@@ -11,6 +11,7 @@
 @import 'partials/footer';
 @import 'partials/grid-item';
 @import 'partials/header';
+@import 'partials/header-section';
 @import 'partials/layout';
 @import 'partials/mobile-nav-toggle';
 @import 'partials/off-canvas';
