--- a/wp-content/themes/w4ptheme/scss/partials/_site-navigation.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_site-navigation.scss
@@ -69,6 +69,7 @@
         visibility: hidden;
         position: absolute;
         left: 0;
+        z-index: 102;
         min-width: 100%;
         background: $sky--dark;
         a {
