--- a/wp-content/themes/w4ptheme/scss/partials/_directory-filters.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_directory-filters.scss
@@ -5,6 +5,12 @@
     .selectboxit {
         width: auto;
     }
+    .directoryFilters-form {
+        display: none;
+        @include breakpoint(medium) {
+            display: block;
+        }
+    }
     .directoryFilters-action {
         margin-top: 13px;
     }
