28429 fix disply rule for filters

--- a/static-html/scss/partials/_directory-filters.scss
+++ b/static-html/scss/partials/_directory-filters.scss
@@ -8,7 +8,7 @@
     .directoryFilters-form {
         display: none;
         @include breakpoint(medium) {
-            display: block;
+            display: block !important; // for show block after screen resize if toggle button was clicked
         }
     }
     .directoryFilters-action {
