--- a/static-html/dev-html/partials/section-landing.html
+++ b/static-html/dev-html/partials/section-landing.html
@@ -24,18 +24,19 @@
         <section class="row halfMedium-collapse medium-uncollapse promoList">
             <div class="halfMedium-6 column">
                 <div class="promoList-item">
-                    <a href="#" class="promoList-item-link"></a>
-                    <div class="promoList-item-image">
-                        <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
-                    </div>
-                    <div class="promoList-item-body">
-                        <h3>EXPLORE ART VENUES</h3>
-                        <p>Find places to see and engage with art.</p>
-                        <span class="promoList-item-categoryDecor" style="background-color: rgb(247,148,29);"></span>
-                    </div>
-                    <div class="promoList-item-button">
-                        <a href="#" class="btn btn--white">VENUE DIRECTORY</a>
-                    </div>
+                    <a href="#" class="js-touchFocus">
+                        <div class="promoList-item-image">
+                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                        </div>
+                        <div class="promoList-item-body">
+                            <h3>EXPLORE ART VENUES</h3>
+                            <p>Find places to see and engage with art.</p>
+                            <span class="promoList-item-categoryDecor" style="background-color: rgb(247,148,29);"></span>
+                        </div>
+                        <div class="promoList-item-button">
+                            <span class="btn btn--white">VENUE DIRECTORY</span>
+                        </div>
+                    </a>
                 </div>
                 <!--   / promoList-item  -->
 
@@ -43,18 +44,19 @@
             <!--   promoList-item  -->
             <div class="halfMedium-6 column">
                 <div class="promoList-item">
-                    <a href="#" class="promoList-item-link"></a>
-                    <div class="promoList-item-image">
-                        <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
-                    </div>
-                    <div class="promoList-item-body">
-                        <h3>EXPLORE ART VENUES</h3>
-                        <p>Find places to see and engage with art.</p>
-                        <span class="promoList-item-categoryDecor" style="background-color: rgb(247,148,29);"></span>
-                    </div>
-                    <div class="promoList-item-button">
-                        <a href="#" class="btn btn--white">VENUE DIRECTORY</a>
-                    </div>
+                    <a href="#" class="js-touchFocus">
+                        <div class="promoList-item-image">
+                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                        </div>
+                        <div class="promoList-item-body">
+                            <h3>EXPLORE ART VENUES</h3>
+                            <p>Find places to see and engage with art.</p>
+                            <span class="promoList-item-categoryDecor" style="background-color: rgb(247,148,29);"></span>
+                        </div>
+                        <div class="promoList-item-button">
+                            <span class="btn btn--white">VENUE DIRECTORY</span>
+                        </div>
+                    </a>
                 </div>
                 <!--   / promoList-item  -->
 
@@ -62,18 +64,19 @@
             <!--   promoList-item  -->
             <div class="halfMedium-6 column">
                 <div class="promoList-item">
-                    <a href="#" class="promoList-item-link"></a>
-                    <div class="promoList-item-image">
-                        <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
-                    </div>
-                    <div class="promoList-item-body">
-                        <h3>EXPLORE ART VENUES</h3>
-                        <p>Find places to see and engage with art.</p>
-                        <span class="promoList-item-categoryDecor" style="background-color: rgb(247,148,29);"></span>
-                    </div>
-                    <div class="promoList-item-button">
-                        <a href="#" class="btn btn--white">VENUE DIRECTORY</a>
-                    </div>
+                    <a href="#" class="js-touchFocus">
+                        <div class="promoList-item-image">
+                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                        </div>
+                        <div class="promoList-item-body">
+                            <h3>EXPLORE ART VENUES</h3>
+                            <p>Find places to see and engage with art.</p>
+                            <span class="promoList-item-categoryDecor" style="background-color: rgb(247,148,29);"></span>
+                        </div>
+                        <div class="promoList-item-button">
+                            <span class="btn btn--white">VENUE DIRECTORY</span>
+                        </div>
+                    </a>
                 </div>
                 <!--   / promoList-item  -->
 
@@ -81,18 +84,19 @@
             <!--   promoList-item  -->
             <div class="halfMedium-6 column">
                 <div class="promoList-item">
-                    <a href="#" class="promoList-item-link"></a>
-                    <div class="promoList-item-image">
-                        <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
-                    </div>
-                    <div class="promoList-item-body">
-                        <h3>EXPLORE ART VENUES</h3>
-                        <p>Find places to see and engage with art.</p>
-                        <span class="promoList-item-categoryDecor" style="background-color: rgb(247,148,29);"></span>
-                    </div>
-                    <div class="promoList-item-button">
-                        <a href="#" class="btn btn--white">VENUE DIRECTORY</a>
-                    </div>
+                    <a href="#" class="js-touchFocus">
+                        <div class="promoList-item-image">
+                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                        </div>
+                        <div class="promoList-item-body">
+                            <h3>EXPLORE ART VENUES</h3>
+                            <p>Find places to see and engage with art.</p>
+                            <span class="promoList-item-categoryDecor" style="background-color: rgb(247,148,29);"></span>
+                        </div>
+                        <div class="promoList-item-button">
+                            <span class="btn btn--white">VENUE DIRECTORY</span>
+                        </div>
+                    </a>
                 </div>
                 <!--   / promoList-item  -->
 
