--- a/wp-content/themes/w4ptheme/scss/partials/_promo-list.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_promo-list.scss
@@ -5,14 +5,31 @@
     position: relative;
     margin-bottom: 30px;
     overflow: hidden;
-}
-.promoList-item-link {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 102;
+    a {
+        display: block;
+        position: relative;
+    }
+    &:hover,
+    a:focus {
+        .promoList-item-categoryDecor {
+            top: -510px;
+            bottom: -510px;
+            @include breakpoint(large) {
+                top: -300px;
+                bottom: -300px;
+            }
+        }
+        .promoList-item-body {
+            p {
+                height: auto;
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+        .promoList-item-button {
+            opacity: 1;
+        }
+    }
 }
 .promoList-item-image {
     img {
@@ -53,28 +70,22 @@
     p {
         position: relative;
         z-index: 101;
+        height: 0;
         margin-bottom: 0;
         transition: all .2s ease-out;
-        @include breakpoint(large) {
-            height: 0;
-            visibility: hidden;
-            opacity: 0;
-        }
+        visibility: hidden;
+        opacity: 0;
     }
 }
 .promoList-item-categoryDecor {
     position: absolute;
     left: 0;
-    top: -510px;
-    bottom: -510px;
+    top: -10px;
+    bottom: 0;
     z-index: 100;
     width: 100%;
     opacity: 0.75;
     transition: all .2s ease-out;
-    @include breakpoint(large) {
-        top: -10px;
-        bottom: 10px;
-    }
 }
 .promoList-item-button {
     position: absolute;
@@ -82,32 +93,12 @@
     right: 10px;
     z-index: 103;
     transition: all .2s ease-out;
+    opacity: 0;
     @include breakpoint(large) {
         bottom: 30px;
         right: 30px;
-        opacity: 0;
     }
     .btn {
         min-width: 194px;
-    }
-}
-.promoList-item {
-    &:hover {
-        .promoList-item-categoryDecor {
-            @include breakpoint(large) {
-                top: -300px;
-                bottom: -300px;
-            }
-        }
-        .promoList-item-body {
-            p {
-                height: auto;
-                opacity: 1;
-                visibility: visible;
-            }
-        }
-        .promoList-item-button {
-            opacity: 1;
-        }
     }
 }
