--- a/static-html/dev-html/partials/home-header.html
+++ b/static-html/dev-html/partials/home-header.html
@@ -1,6 +1,6 @@
 <header class="siteHeader siteHeader--headerSection">
-    <section class="row siteHeader-top">
-        <div class="row siteHeader-top-inner">
+    <div class="row siteHeader-inner">
+        <section class="row column siteHeader-top">
             <div class="small-9 medium-3 column">
                 <div class="siteHeader-logo">
                     <a href="#" title="Creative Pinellas">
@@ -87,8 +87,8 @@
                     <span class="mobileNavToggle-hamburger"><span></span></span>
                 </a>
             </div>
-        </div>
-        <div class="row headerSection">
+        </section>
+        <div class="row column headerSection">
             <div class="medium-6 large-7 column">
                 <div class="headerSection-inner-poster">
                     <img src="http://placehold.it/556x375" srcset="http://placehold.it/960x650 480w, http://placehold.it/1600x1080 768w" alt="">
@@ -103,5 +103,5 @@
             </div>
         </div>
 
-    </section>
+    </div>
 </header>
