--- a/wp-content/themes/w4ptheme/scss/partials/_header.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_header.scss
@@ -6,27 +6,14 @@
 .siteHeader {
     background-color: $sky;
 }
-.siteHeader-top {
+.siteHeader-inner {
     position: relative;
-    padding: 20px 0;
+    background-color: $sky;
     overflow: hidden;
     @include breakpoint(large) {
         overflow: visible;
     }
-    @include breakpoint(large down) {
-        display: table;
-        width: 100%;
-
-        & > .column {
-            display: table-cell;
-            vertical-align: middle;
-            float: none;
-            &:last-child:not(:first-child) {
-                float: none;
-            }
-        }
-    }
-    &:before {
+    &::before {
         content: "";
         display: block; // redefine row:before display:table
         position: absolute;
@@ -41,6 +28,23 @@
         @include breakpoint(medium) {
             width: 760px;
             background-position: 0 -160px;
+        }
+    }
+}
+.siteHeader-top {
+    position: relative;
+    padding: 20px 0;
+    @include breakpoint(large down) {
+        display: table;
+        width: 100%;
+
+        & > .column {
+            display: table-cell;
+            vertical-align: middle;
+            float: none;
+            &:last-child:not(:first-child) {
+                float: none;
+            }
         }
     }
     & > .column {
@@ -66,36 +70,17 @@
             bottom: -2px;
             left: 0;
             width: 100%;
-            height: 70px;
+            height: 50px;
             content: "";
             background-color: $white;
         }
     }
-    .siteHeader-top {
-        padding-left: .625rem;
-        padding-right: .625rem;
-        @include breakpoint(medium) {
-            padding-left: .9375rem;
-            padding-right: .9375rem;
-        }
-        &:before {
+    .siteHeader-inner {
+        &::before {
             width: 200%;
-            @include breakpoint(halfMedium) {
-                width: 100%;
-            }
             @include breakpoint(medium) {
                 width: 760px;
             }
-        }
-    }
-}
-.siteHeader-top-inner {
-    margin-bottom: 20px;
-    > .column:last-child,
-    > .columns:last-child {
-        margin-top: 12px;
-        @include breakpoint(large) {
-            margin-top: 0;
         }
     }
 }
