--- a/static-html/dev-html/partials/section-landing.html
+++ b/static-html/dev-html/partials/section-landing.html
@@ -26,7 +26,7 @@
                 <div class="promoList-item">
                     <a href="#" class="js-touchFocus">
                         <div class="promoList-item-image">
-                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/1480x1480 768w, http://placehold.it/480x480 1200w">
                         </div>
                         <div class="promoList-item-body">
                             <h3>EXPLORE ART VENUES</h3>
@@ -46,7 +46,7 @@
                 <div class="promoList-item">
                     <a href="#" class="js-touchFocus">
                         <div class="promoList-item-image">
-                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/1480x1480 768w, http://placehold.it/480x480 1200w">
                         </div>
                         <div class="promoList-item-body">
                             <h3>EXPLORE ART VENUES</h3>
@@ -66,7 +66,7 @@
                 <div class="promoList-item">
                     <a href="#" class="js-touchFocus">
                         <div class="promoList-item-image">
-                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/1480x1480 768w, http://placehold.it/480x480 1200w">
                         </div>
                         <div class="promoList-item-body">
                             <h3>EXPLORE ART VENUES</h3>
@@ -86,7 +86,7 @@
                 <div class="promoList-item">
                     <a href="#" class="js-touchFocus">
                         <div class="promoList-item-image">
-                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                            <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/1480x1480 768w, http://placehold.it/480x480 1200w">
                         </div>
                         <div class="promoList-item-body">
                             <h3>EXPLORE ART VENUES</h3>
