--- a/wp-content/themes/w4ptheme/scss/partials/_header-section.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_header-section.scss
@@ -8,6 +8,9 @@
   @include breakpoint(medium) {
     margin-bottom: 0;
   }
+  img {
+    width: 100%;
+  }
 }
 .headerSection-text {
   color: $white;
