28554 have strange 1px border between 2 and 3 promobox, fixed with .end class on the last element

--- a/static-html/dev-html/partials/index-page-template.html
+++ b/static-html/dev-html/partials/index-page-template.html
@@ -44,7 +44,7 @@
             <!--   / promoList-item  -->
 
         </div>
-        <div class="medium-4 column">
+        <div class="medium-4 column end">
             <div class="promoList-item">
                 <a href="#" class="js-touchFocus">
                     <div class="promoList-item-image">
