28503 set correct filters to list pages

--- a/static-html/dev-html/partials/event-list-template.html
+++ b/static-html/dev-html/partials/event-list-template.html
@@ -4,7 +4,7 @@
 
             <article class="postPage">
                 <!--    Post title  -->
-                <h1 class="postPage-title u-text--center">Events Calendar</h1>
+                <h1 class="postPage-title u-text--center">Arts Calendar</h1>
 
                 <!--    Post Content    -->
                 <div class="postPage-content">
@@ -92,7 +92,6 @@
         </section>
     </form>
 </section>
-
 
 <section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
     <div class="column">
