--- a/static-html/dev-html/partials/directory-template.html
+++ b/static-html/dev-html/partials/directory-template.html
@@ -4,7 +4,7 @@
 
             <article class="postPage">
                 <!--    Post title  -->
-                <h1 class="postPage-title u-text--center">Arts Calendar</h1>
+                <h1 class="postPage-title u-text--center">Local Artist</h1>
 
                 <!--    Post Content    -->
                 <div class="postPage-content">
@@ -30,7 +30,7 @@
 <section class="u-background--gray directoryFilters">
     <section class="row">
         <div class="column">
-            <h2 class="u-text--center">NARROW DOWN EVENTS</h2>
+            <h2 class="u-text--center">NARROW DOWN Artist</h2>
             <p class="hide-for-medium">
                 <a href="#" class="btn btn--fullWidth js-toggle" data-toggle="js-filtersForm">Filters</a>
             </p>
@@ -38,53 +38,34 @@
     </section>
     <form action="" class="directoryFilters-form js-filtersForm">
         <section class="row">
-            <div class="halfMedium-6 medium-4 column">
-                <label for="attend">Who Should Attend</label>
-                <div class="form-row">
-                    <select id="attend">
-                        <option value="Everyone">Everyone</option>
-                        <option value="For Artist">For Artist</option>
-                        <option value="For the Public">For the Public</option>
-                    </select>
-                </div>
-            </div>
-            <div class="halfMedium-6 medium-4 column">
-                <label for="eventType">Type of Event</label>
+            <div class="halfMedium-6 column">
+                <label for="eventType">Media Taxonomy</label>
                 <div class="form-row">
                     <select id="eventType">
                         <option value="All types">All types</option>
-                        <option value="Option 1">Option 1</option>
-                        <option value="Option 2">Option 2</option>
-                        <option value="Option 3">Option 3</option>
+                        <option value="Option 1">Ceramics</option>
+                        <option value="Option 2">Crafts</option>
+                        <option value="Option 3">Dance</option>
+                        <option value="Option 3">Drawing</option>
+                        <option value="Option 3">Experimental</option>
+                        <option value="Option 3">Film/video</option>
+                        <option value="Option 3">Glass</option>
+                        <option value="Option 3">Installation</option>
+                        <option value="Option 3">Jewelery</option>
+                        <option value="Option 3">Music (Current)</option>
+                        <option value="Option 3">Music (Orchestral)</option>
+                        <option value="Option 3">Musical Theatre</option>
+                        <option value="Option 3">Painting</option>
+                        <option value="Option 3">Performance</option>
+                        <option value="Option 3">Photography</option>
+                        <option value="Option 3">Print-making</option>
+                        <option value="Option 3">Sculpture</option>
+                        <option value="Option 3">Theater</option>
+                        <option value="Option 3">Written Word</option>
                     </select>
                 </div>
             </div>
-            <div class="medium-4 column">
-                <label for="location">Location</label>
-                <div class="form-row">
-                    <select id="location">
-                        <option value="All Communities">All Communities</option>
-                        <option value="Option 1">Option 1</option>
-                        <option value="Option 2">Option 2</option>
-                        <option value="Option 3">Option 3</option>
-                    </select>
-                </div>
-            </div>
-        </section>
-        <section class="row">
-            <div class="halfMedium-6 medium-3 medium-offset-1 column">
-                <label for="dateFrom">Date Range: From</label>
-                <div class="form-row is-datepicker">
-                    <input type="text" id="dateFrom" placeholder="all" class="js-datepicker">
-                </div>
-            </div>
-            <div class="halfMedium-6 medium-3 column">
-                <label for="dateTo">To</label>
-                <div class="form-row is-datepicker">
-                    <input type="text" id="dateTo" placeholder="all" class="js-datepicker">
-                </div>
-            </div>
-            <div class="medium-3 column end">
+            <div class="halfMedium-6 column">
                 <div class="form-row directoryFilters-action">
                     <input type="submit" value="Go" class="btn btn--fullWidth btn--ocean">
                 </div>
@@ -92,7 +73,6 @@
         </section>
     </form>
 </section>
-
 
 <section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
     <div class="column">
