--- a/static-html/dev-html/partials/venue-list-template.html
+++ b/static-html/dev-html/partials/venue-list-template.html
@@ -4,7 +4,7 @@
 
             <article class="postPage">
                 <!--    Post title  -->
-                <h1 class="postPage-title u-text--center">Venue Calendar</h1>
+                <h1 class="postPage-title u-text--center">Art Venues</h1>
 
                 <!--    Post Content    -->
                 <div class="postPage-content">
@@ -30,7 +30,7 @@
 <section class="u-background--gray directoryFilters">
     <section class="row">
         <div class="column">
-            <h2 class="u-text--center">NARROW DOWN EVENTS</h2>
+            <h2 class="u-text--center">NARROW DOWN VENUE</h2>
             <p class="hide-for-medium">
                 <a href="#" class="btn btn--fullWidth js-toggle" data-toggle="js-filtersForm">Filters</a>
             </p>
@@ -39,17 +39,7 @@
     <form action="" class="directoryFilters-form js-filtersForm">
         <section class="row">
             <div class="halfMedium-6 medium-4 column">
-                <label for="attend">Who Should Attend</label>
-                <div class="form-row">
-                    <select id="attend">
-                        <option value="Everyone">Everyone</option>
-                        <option value="For Artist">For Artist</option>
-                        <option value="For the Public">For the Public</option>
-                    </select>
-                </div>
-            </div>
-            <div class="halfMedium-6 medium-4 column">
-                <label for="eventType">Type of Event</label>
+                <label for="eventType">Type</label>
                 <div class="form-row">
                     <select id="eventType">
                         <option value="All types">All types</option>
@@ -70,21 +60,7 @@
                     </select>
                 </div>
             </div>
-        </section>
-        <section class="row">
-            <div class="halfMedium-6 medium-3 medium-offset-1 column">
-                <label for="dateFrom">Date Range: From</label>
-                <div class="form-row is-datepicker">
-                    <input type="text" id="dateFrom" placeholder="all" class="js-datepicker">
-                </div>
-            </div>
-            <div class="halfMedium-6 medium-3 column">
-                <label for="dateTo">To</label>
-                <div class="form-row is-datepicker">
-                    <input type="text" id="dateTo" placeholder="all" class="js-datepicker">
-                </div>
-            </div>
-            <div class="medium-3 column end">
+            <div class="halfMedium-6 medium-4 column">
                 <div class="form-row directoryFilters-action">
                     <input type="submit" value="Go" class="btn btn--fullWidth btn--ocean">
                 </div>
