28503 add submit event button, reduce bottom space in siteContent

--- a/static-html/scss/partials/_forms.scss
+++ b/static-html/scss/partials/_forms.scss
@@ -72,6 +72,10 @@ input[type="submit"].btn--ocean,
 .btn--fullWidth {
     width: 100%;
 }
+.btn-middleWidth {
+    padding-left: 50px;
+    padding-right: 50px;
+}
 
 /*  Global Select styling */
 .selectboxit-container {
