--- a/wp-content/themes/w4ptheme/scss/partials/_forms.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_forms.scss
@@ -72,6 +72,10 @@ input[type="submit"].btn--ocean,
 .btn--fullWidth {
     width: 100%;
 }
+.btn-middleWidth {
+    padding-left: 50px;
+    padding-right: 50px;
+}
 
 /*  Global Select styling */
 .selectboxit-container {
