28429 remove height from offcanwas wrapper for datepicker position fix

--- a/static-html/scss/partials/_layout.scss
+++ b/static-html/scss/partials/_layout.scss
@@ -1,6 +1,5 @@
 .off-canvas-wrapper,
 .off-canvas-wrapper-inner {
-    height: 100%;
     background-color: $sky;
 }
 .off-canvas-content {
@@ -11,6 +10,9 @@
 }
 .off-canvas {
     height: 100%;
+}
+.siteBody {
+    min-height: 500px;
 }
 .siteContent {
     padding: 50px 10px 50px;
