28555 added community section layout

--- a/static-html/scss/setup/_variables.scss
+++ b/static-html/scss/setup/_variables.scss
@@ -1,3 +1,6 @@
 $fontSize-navigation: 0.88rem;
+$fontSize-communitySmall: 2rem;
+$fontSize-communityMedium: 2.62rem;
+$fontSize-communityLarge: 2.87rem;
 
 $gray-border: #d4d4d4;
