--- a/wp-content/themes/w4ptheme/scss/application.scss
+++ b/wp-content/themes/w4ptheme/scss/application.scss
@@ -6,6 +6,7 @@
 @import 'global';
 @import 'partials/forms';
 
+@import 'partials/community-section';
 @import 'partials/datepicker';
 @import 'partials/directory-filters';
 @import 'partials/entity-grid';
