Added same text from design and made scss indents and tabs same as in whole project

--- a/static-html/dev-html/partials/index-page-template.html
+++ b/static-html/dev-html/partials/index-page-template.html
@@ -76,25 +76,25 @@
     </div>
     <div class="row js-community-equalHeight">
         <div class="small-4 column">
-            <a href="#" class="communitySection-link" data-equal style="background-image: url(http://placehold.it/320x800)">
+            <a href="#" class="communitySection-link" data-equal>
+                <span class="communitySection-link-imgLayer" style="background-image: url(http://placehold.it/320x800)"></span>
                 <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
-                <span>Some text for this links</span>
+                <span class="communitySection-link-text js-equalizer">Our Grants</span>
             </a>
-
         </div>
         <div class="small-4 column">
-            <a href="#" class="communitySection-link" data-equal style="background-image: url(http://placehold.it/320x800)">
+            <a href="#" class="communitySection-link" data-equal>
+                <span class="communitySection-link-imgLayer" style="background-image: url(http://placehold.it/320x800)"></span>
                 <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
-                <span>Some text for this links</span>
+                <span class="communitySection-link-text js-equalizer">Learning Center</span>
             </a>
-
         </div>
         <div class="small-4 column">
-            <a href="#" class="communitySection-link" data-equal style="background-image: url(http://placehold.it/320x800)">
+            <a href="#" class="communitySection-link" data-equal>
+                <span class="communitySection-link-imgLayer" style="background-image: url(http://placehold.it/320x800)"></span>
                 <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
-                <span>Some text for this links</span>
+                <span class="communitySection-link-text js-equalizer">Artist Events</span>
             </a>
-
         </div>
     </div>
 </section>
