28623 bug on event page sidebar, set uppercase for bold titles

--- a/static-html/dev-html/partials/event-page-template.html
+++ b/static-html/dev-html/partials/event-page-template.html
@@ -47,17 +47,17 @@
                 <h3>Event details H3</h3>
                 <div class="siteSidebar-item-content">
                     <p>
-                        <strong>Date:</strong> January 28th, 2017 <br>
-                        <strong>Time:</strong> 7:00 AM - 10:00 PM
+                        <strong class="u-text--upper">Date:</strong> January 28th, 2017 <br>
+                        <strong class="u-text--upper">Time:</strong> 7:00 AM - 10:00 PM
                     </p>
                     <p>
-                        <strong>Event type</strong>
+                        <strong class="u-text--upper">Event type:</strong>
                     </p>
                     <p>
-                        <strong>Artist(s):</strong> <a href="#">Artist Name</a>, <a href="#">Artist Name</a>
+                        <strong class="u-text--upper">Artist(s):</strong> <a href="#">Artist Name</a>, <a href="#">Artist Name</a>
                     </p>
                     <p>
-                        <strong>Website:</strong> <a href="#">website.com</a>
+                        <strong class="u-text--upper">Website:</strong> <a href="#">website.com</a>
                     </p>
                 </div>
             </div>
