28623 added comment for back-end developer

--- a/static-html/dev-html/partials/event-page-template.html
+++ b/static-html/dev-html/partials/event-page-template.html
@@ -46,6 +46,8 @@
             <div class="siteSidebar-item">
                 <h3>Event details H3</h3>
                 <div class="siteSidebar-item-content">
+                    <!-- NOTE: <strong class="u-text--upper"> ... this class needs to be placed in template,
+                        if adding this class will need much time, try to set titles in <strong> tag UPPERCASE as default example: <strong class="u-text--upper">DATE:</strong>-->
                     <p>
                         <strong class="u-text--upper">Date:</strong> January 28th, 2017 <br>
                         <strong class="u-text--upper">Time:</strong> 7:00 AM - 10:00 PM
