28556 add our journal section to home page

--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -13,17 +13,18 @@
 @import 'partials/footer';
 @import 'partials/grid-item';
 @import 'partials/header';
-@import 'partials/home-intro-grid';
 @import 'partials/header-section';
+@import 'partials/home-section';
+@import 'partials/home-intro-grid';
 @import 'partials/layout';
 @import 'partials/mobile-nav-toggle';
 @import 'partials/off-canvas';
 @import 'partials/post-list';
 @import 'partials/post-page';
 @import 'partials/post-page-navigation';
-@import 'partials/sidebar-gallery';
 @import 'partials/promo-list';
 @import 'partials/promo-space';
+@import 'partials/sidebar-gallery';
 @import 'partials/site-navigation';
 @import 'partials/site-sitebar';
 @import 'partials/social-list';
