--- a/static-html/dev-html/partials/index-page-template.html
+++ b/static-html/dev-html/partials/index-page-template.html
@@ -1,11 +1,11 @@
-<section class="homeIntro">
-    <div class="row homeIntro-textInfo">
+<section class="homeSection homeSection--homeIntro">
+    <div class="row homeSection-text">
         <div class="medium-11 medium-centered large-uncentered large-8 column">
             <h1>What is Creative Pinellas?</h1>
             <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight.<br></p>
         </div>
     </div>
-    <div class="row small-collapse homeIntro-gridList">
+    <div class="row small-collapse homeSection--homeIntro-gridList">
         <div class="medium-4 column">
             <div class="promoList-item">
                 <a href="#" class="js-touchFocus">
@@ -67,8 +67,8 @@
 </section>
 <!-- end .homeIntro -->
 
-<section class="communitySection">
-    <div class="row communitySection-text">
+<section class="homeSection communitySection">
+    <div class="row homeSection-text">
         <div class="medium-11 medium-centered large-uncentered large-8 column">
             <h1>For The Art Community</h1>
             <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight.<br></p>
@@ -99,3 +99,195 @@
     </div>
 </section>
 <!-- end .communitySection -->
+
+<section class="homeSection homeSection--journalSection">
+    <div class="row homeSection-text">
+        <div class="medium-11 medium-centered large-uncentered large-8 column">
+            <h1>Our Journal</h1>
+            <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight.<br></p>
+        </div>
+    </div>
+    <div class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="gridItem gridItem--blog">
+                <a href="#" class="js-touchFocus">
+                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
+                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                    <div class="gridItem-info">
+                        <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
+                        <p>Tarpon Springs Company Re-Imagines Opera for Today's Audience (...)</p>
+                        <p><strong>Read Post</strong></p>
+                        <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!-- end .journalSection -->
