--- a/wp-content/themes/w4ptheme/scss/partials/_grid-item.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_grid-item.scss
@@ -21,6 +21,7 @@
     }
     img {
         width: 100%;
+        backface-visibility: hidden;
     }
 }
 .gridItem-info {
@@ -61,6 +62,7 @@
     height: 25px;
     opacity: .75;
     transition: all .2s ease-out;
+    backface-visibility: hidden;
 }
 .gridItem--blog {
     .gridItem-info {
@@ -75,6 +77,12 @@
         .gridItem-info {
             opacity: 1;
             visibility: visible;
+        }
+    }
+    p {
+        margin-bottom: 1%;
+        &:last-child {
+            margin-bottom: 0;
         }
     }
 }
