--- a/static-html/scss/setup/_colours.scss
+++ b/static-html/scss/setup/_colours.scss
@@ -10,7 +10,10 @@ $ocean: #0177c1;
 $ocean--80: rgba(1,119,193,.8);
 $orange: #f7941d;
 $orange--75: rgba(247,148,29,.75);
+$red: #d65453;
+$red--light: #ffebe8;
 $sky: #04b4c3;
+$sky--40: rgba(4,180,195,.4);
 $sky--dark: #16a2af;
 $sky--darker: #1393a0;
 $sunshine: #ffca08;
