--- a/static-html/dev-html/partials/contact-template.html
+++ b/static-html/dev-html/partials/contact-template.html
@@ -14,34 +14,55 @@
                     </div>
 
                     <div class="contactForm">
-                        <form action="#" class="formElement">
-                            <div class="formElement-row large-5">
-                                <label for="name_field">Name</label>
-                                <input type="text" name="name_field" id="name_field">
+                        <form action="#">
+                            <!-- TODO: default wp Contact7 form error and success message, replase only text -->
+                            <div class="wpcf7-response-output wpcf7-display-none wpcf7-validation-errors" role="alert" style="display: block;">There was a problem with your submission. Errors are highlighter below</div>
+
+                            <div class="wpcf7-response-output wpcf7-display-none wpcf7-mail-sent-ok" style="display: block;" role="alert">Thank you for your message. It has been sent.</div>
+                            <!-- TODO: end -->
+
+                            <div class="large-5">
+                                <label for="name_field">Name *</label>
+                                <!--    TODO: span will be generated automaticly with Form7-->
+                                <span class="wpcf7-form-control-wrap">
+                                    <input type="text" name="name_field" id="name_field" class="wpcf7-not-valid">
+                                    <!--    TODO: error messages is default from Form7 -->
+                                    <span role="alert" class="wpcf7-not-valid-tip">The field is required.</span>
+                                </span>
                             </div>
-                            <div class="formElement-row large-5">
-                                <label for="email_field">Email</label>
-                                <input type="email" name="email_field" id="email_field">
+                            <div class="large-5">
+                                <label for="email_field">Email *</label>
+                                <span class="wpcf7-form-control-wrap">
+                                    <input type="email" name="email_field" id="email_field">
+                                </span>
                             </div>
-                            <div class="formElement-row large-5">
+                            <div class="large-5">
                                 <label for="org_field">Organization</label>
-                                <input type="text" name="org_field" id="org_field">
+                                <span class="wpcf7-form-control-wrap">
+                                    <input type="text" name="org_field" id="org_field">
+                                </span>
                             </div>
-                            <div class="formElement-row large-5">
+                            <div class="large-5">
                                 <label for="person_select">I am a(n)</label>
-                                <select id="person_select" name="person_select">
-                                    <option value="Artist">Artist</option>
-                                    <option value="Art Lover">Art Lover</option>
-                                    <option value="Member of Media">Member of Media</option>
-                                    <option value="Other">Other</option>
-                                </select>
+                                <span class="wpcf7-form-control-wrap">
+                                    <select id="person_select" name="person_select">
+                                        <option value="Artist">Artist</option>
+                                        <option value="Art Lover">Art Lover</option>
+                                        <option value="Member of Media">Member of Media</option>
+                                        <option value="Other">Other</option>
+                                    </select>
+                                </span>
                             </div>
-                            <div class="formElement-row">
-                                <label for="org_field">Message</label>
-                                <textarea></textarea>
+                            <div class="small-12">
+                                <label for="org_field">Message *</label>
+                                <span class="wpcf7-form-control-wrap">
+                                    <textarea></textarea>
+                                </span>
                             </div>
-                            <div class="formElement-row">
-                                <input type="submit" value="Submit">
+                            <div class="small-12">
+                                <div class="form-row">
+                                    <input type="submit" value="Submit" class="btn btn-middleWidth btn--ocean">
+                                </div>
                             </div>
                         </form>
                     </div>
